2001-11-13  Stefan Monnier  <monnier@cs.yale.edu>

	* newcomment.el (comment-normalize-vars): Handle a nil comment-padding.

2001-11-12  Richard M. Stallman  <rms@gnu.org>

	* calendar/todo-mode.el (todo-save): Add save-excursion
	and save-restriction.

2001-11-12  Eli Zaretskii  <eliz@is.elta.co.il>

	* menu-bar.el (menu-bar-edit-menu): Don't use x-selection-exists-p if
	it is not fboundp.
	(clipboard-yank): Ditto.

2001-11-10  Jason Rumney  <jasonr@gnu.org>

	* term/w32-win.el (redisplay-dont-pause): Don't set.

2001-11-09  Andre Spiegel  <spiegel@gnu.org>

	Suggested by Kalle Olavi Niemitalo <kon@iki.fi>:

	* vc-hooks.el (vc-error-occured): Backquotified.
	(vc-file-prop-obarray): Use prime length for better efficiency.

	* vc.el (vc-clear-context): Fill obarray with 0, not nil.
	(vc-annotate-color-map): Doc fix.

2001-11-08  Eli Zaretskii  <eliz@is.elta.co.il>

	* international/mule.el (make-translation-table): Doc fix.
	Suggested by Alex Schroeder <alex@gnu.org>.

2001-11-05  Richard M. Stallman  <rms@gnu.org>

	* emacs-lisp/lisp-mode.el (eval-last-sexp-1): Return the value
	of the evaluated form.

2001-11-03  Stefan Monnier  <monnier@cs.yale.edu>

	* term.el (all faces): Don't (copy-face 'default <foo>).

2001-11-03  Eli Zaretskii  <eliz@is.elta.co.il>

	* tooltip.el (tooltip-delay): Decrease to 0.7.
	(tooltip-hide-delay): Enlarge to 10.

2001-11-03  Richard M. Stallman  <rms@gnu.org>

	* mouse.el (popup-menu): If the user refuses to select
	from a menu, don't try to invoke the menu.

2001-11-03  Eli Zaretskii  <eliz@is.elta.co.il>

	* frame.el (set-background-color, set-foreground-color):
	Call face-set-after-frame-default, to propagate the new colors to
	the frame's parameters alist.

	* calendar/timeclock.el (timeclock-out): Signal an error if
	timeclock-last-event is nil.

2001-11-01  Richard M. Stallman  <rms@gnu.org>

	* files.el (find-backup-file-name): Use make-backup-file-name.

2001-11-01  Gerd Moellmann  <gerd@gnu.org>
